<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/drawer_group_content">
        <menu>
            <item
                android:id="@+id/drawer_news"
                android:checkable="true"
                android:checked="true"
                android:icon="@mipmap/ic_drawer_news"
                android:title="@string/news" />
            <item
                android:id="@+id/drawer_wechat"
                android:checkable="true"
                android:icon="@mipmap/ic_drawer_wechat"
                android:title="@string/wechat" />
            <item
                android:id="@+id/drawer_joke"
                android:checked="true"
                android:icon="@mipmap/ic_drawer_happy"
                android:title="@string/joke" />
        </menu>
    </item>
    <item android:title="@string/drawer_group_options">
        <menu>
            <item
                android:id="@+id/drawer_like"
                android:checkable="true"
                android:icon="@mipmap/ic_drawer_like"
                android:title="@string/drawer_collection" />
            <item
                android:id="@+id/drawer_setting"
                android:checkable="true"
                android:checked="false"
                android:icon="@mipmap/ic_drawer_setting"
                android:title="@string/drawer_setting" />
            <item
                android:id="@+id/drawer_about"
                android:checkable="true"
                android:icon="@mipmap/ic_drawer_about"
                android:title="@string/drawer_about" />
        </menu>
    </item>
</menu>